torch-compiler/src/test/resources/negative/EntityWithoutIdAnnotation.java
package negative;

import org.brightify.torch.annotation.Entity;

@Entity
public class EntityWithoutIdAnnotation{
    Long id1;
    Long id2;
    Long id3;
}